perl-PerlIO-utf8_strict: Autospec creation for update from version 0.008 to version 0.009
0.009     2022-01-08 17:26:23+01:00 Europe/Amsterdam
          - Mark functions that croak as noreturn

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = perl-PerlIO-utf8_strict
-url = https://cpan.metacpan.org/authors/id/L/LE/LEONT/PerlIO-utf8_strict-0.008.tar.gz
+url = https://cpan.metacpan.org/authors/id/L/LE/LEONT/PerlIO-utf8_strict-0.009.tar.gz
 archives = http://http.debian.net/debian/pool/main/libp/libperlio-utf8-strict-perl/libperlio-utf8-strict-perl_0.007-2.debian.tar.xz deblicense/
 giturl = 
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
