perl-PerlIO-utf8_strict: Autospec creation for update from version 0.009 to version 0.010
0.010     2022-10-26 18:57:45+02:00 Europe/Amsterdam
          - Re-release with updated pport.h for 5.8.5 compatibility

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = perl-PerlIO-utf8_strict
-url = https://cpan.metacpan.org/authors/id/L/LE/LEONT/PerlIO-utf8_strict-0.009.tar.gz
+url = https://cpan.metacpan.org/authors/id/L/LE/LEONT/PerlIO-utf8_strict-0.010.tar.gz
 archives = http://http.debian.net/debian/pool/main/libp/libperlio-utf8-strict-perl/libperlio-utf8-strict-perl_0.007-2.debian.tar.xz deblicense/
 giturl = 
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
